# phd

./: .gitignore  .gitignore~  .gitmodules  append_commands.sh  build_docker_image.bash  isaac_sim.sh  laser_sample.json  map_sample.json  requirements.txt  run_docker.bash  start_isaac_sim.sh  start_isaac_sim.sh~
containers/ros-template/: Dockerfile  Dockerfile~  build.sh  docker-compose.yml  docker-compose.yml~  ros_entrypoint.sh  ros_entrypoint.sh~  run.sh
edi/: config.json  main.py  plan.md  temp.txt
edi_env/: pyvenv.cfg
edi_v2/: main.py
isaac_sim_extensions/: maticodes.project.first-1.0.0
isaac_sim_exts/edi/config/: extension.gen.toml  extension.toml  extension.toml~
isaac_sim_exts/edi/src/: extension.py  old_extension.py  sim.py
isaac_sim_stages/: box.usd  carter_ros.usd  hospital_w_mockbot.usd  mockbot_1.usd  open_warehouse_1.usd  playground_1.usd  playground_2.usd
isaac_sim_stages/graphs/: control.usd  controller_graph.usd  mockbot_graphs.usd
my_env/: pyvenv.cfg
old_and_deprecated/: Dockerfile  build_docker_image.bash  run_docker.bash
robot_parts/: sim_lidar.usd
ros2_ws/: readme.md  run.sh  rviz_config.rviz
ros2_ws/cpp_image_utils/: CMakeLists.txt  README.md
ros2_ws/cpp_image_utils/include/: image_utils.hpp
ros2_ws/cpp_image_utils/src/: image_utils.cpp  main.cpp
ros2_ws/launch/: system_launch.py
ros2_ws/launch/log/: latest_build
ros2_ws/src/cpp_map_publisher/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_map_publisher/src/: map_pub_node.cpp
ros2_ws/src/edi_calculator/: CMakeLists.txt  package.xml
ros2_ws/src/edi_calculator/src/: edi_calculator_node.cpp
ros2_ws/src/image_utils/: CMakeLists.txt  package.xml
ros2_ws/src/image_utils/include/image_utils/: image_utils.hpp
ros2_ws/src/image_utils/src/: image_utils.cpp
ros2_ws/src/nodes/: CMakeLists.txt  package.xml
ros2_ws/src/nodes/src/: laser_publisher_planar.cpp
sandbox/: main.py
urdf/: ActionGraph.usd  carter_1.usd
